--- a/src/index.css
+++ b/src/index.css
@@ -11,4 +11,6 @@
   --z-notch: 1;
   --z-notch-handle: 2;
   --z-notch-backdrop: -1;
+
+  --padding: 8px;
 }
